package OldCode;

public class ChocolateIceCream extends BasicIceCream{

    public String getDescription() {
        return "Single scoop of Chocolate Ice-Cream";
    }

    public double getCost() {
        return 1.5;
    }
}
