package OldCode;

public class VanillaIceCream extends BasicIceCream {

    public String getDescription() {
        return "Single scoop of Vanilla Ice-Cream";
    }

    public double getCost() {
        return 1.0;
    }
}
