@startuml
skinparam classAttributeIconSize 0

class BasicIceCream{
    + getDescription() : String
    + getCost() : Double
}
class VanillaIceCream{
    + getDescription() : String
    + getCost() : Double
}

class ChocolateIceCream{
    + getDescription() : String
    + getCost() : Double
}

class MintIceCream{
    + getDescription() : String
    + getCost() : Double
}



BasicIceCream <|-- VanillaIceCream
BasicIceCream <|-- ChocolateIceCream
BasicIceCream <|-- MintIceCream




@enduml